--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,23 @@
+main {
+  width: 60%;
+  margin: auto;
+  text-align: center;
+}
+
 li {
   font-size: 30px;
+  list-style: none;
+  border: 1px solid black;
+  position: relative;
 
 }
 
 li button {
-  margin-left: 20px;
-  font-size: 20px;
+  background-color: gray;
+  color: #fff;
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  right: 0;
+
 }
